--- a/css/main.css
+++ b/css/main.css
@@ -39,7 +39,7 @@ display:inline-block;
 }
 .tab-button{
     height: 50px;
-    width: 70px;
+    width: 120px;
     margin-top: 20px;
     background-color: black;
     margin-left: 300px;
@@ -72,7 +72,18 @@ display:inline-block;
 }
 .tab-button5{
     margin-left: 80px;
-    width: 130px;
+    width: 190px;
     height: 60px;
     font-size: 40px;
+}
+.cards{
+    margin-top: 60px;
+    display: grid;
+    grid-template-columns: repeat(4,400px);
+    grid-column-gap: -100px;
+    margin-left: 150px;
+    align-items: center;
+}
+.card-img-top{
+    max-height: 166px
 }
